[Ananya] : Implemented Spring Security with JWT and OAuth2 login via Google and GitHub